# flexible-mcp-crawl4ai-rag

./: .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
.serena/: project.yml
docs/: configuration.md
initdb/: init.sh  setup.sql.in
src/: config.py  crawl4ai_mcp.py  exceptions.py  models.py  reembed_documents.py  utils.py
src/crawler/: __init__.py  metadata_extractor.py  postgres_client.py  tool_definitions.py  url_scorers.py  web_crawler.py
src/providers/: __init__.py  openai_stack.py  openrouter_web_search.py
src/services/: __init__.py  content_extraction.py  contextual_enrichment_service.py  document_storage_service.py  embedding_service.py  graph_retrieval.py  graph_storage_service.py  ingestion.py  kg_extraction_service.py  reranking_service.py  retrieval.py  scoring_service.py  search_service.py  tombstone_service.py  web_crawler.py  web_search_service.py
src/tools/: reembed_documents.py  tool_definitions.py
tests/: LLM_tool_test_playbook.md  integration_smoke.py  test_coverage_gap_modules.py  test_utils.py
tests/crawler/: test_graph_retrieval.py  test_graph_storage_service.py  test_heading_chunking.py  test_kg_extraction_service.py  test_metadata_extractor.py  test_phase5_deep_crawling.py  test_postgres_client.py  test_tool_definitions.py  test_url_scorers.py  test_web_crawler.py
